--- a/todo.css
+++ b/todo.css
@@ -60,6 +60,7 @@ main{
     text-decoration: none;
     font-weight: bold;
     
+    
 }
 
 a:hover{
@@ -104,13 +105,13 @@ button {
     margin-left: 5px;
 }
 
-.ul {
+ul {
     width: 100%;
     list-style: none;
     padding: 0;
 }
 
-.li {
+li {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -168,8 +169,8 @@ ion-icon:hover{
         margin: 0 auto;
     }
 
-    .li {
-        width: 95%;
+    li {
+        width: 100%;
     
     }
     
@@ -201,8 +202,8 @@ ion-icon:hover{
 }
 
 @media (max-width: 480px) {
-    .li {
-        width: 90%;
+    li {
+        width: 100%;
         flex-direction: column;
         align-items: center;
     }
