--- a/todo.css
+++ b/todo.css
@@ -8,13 +8,19 @@ header {
     background-color: #e80564;
     padding: 10px 20px;
     height: 50px;
-    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: white;
-    font-weight: bold;
     
+}
+
+header h3 {
+    margin: 0;
+}
+
+nav {
+    position: relative;
 }
 
 main{
@@ -50,20 +56,18 @@ main{
     display: flex;
 }
 
-.list{
+.menu .nav-item {
     margin: 0 15px;
 }
 
 
- a {
-    color: white;
+.menu .nav-item a {
     text-decoration: none;
+    color: white;
     font-weight: bold;
-    
-    
 }
 
-a:hover{
+.menu .nav-item a:hover{
     text-decoration: underline;
 }
 
@@ -105,13 +109,13 @@ button {
     margin-left: 5px;
 }
 
-ul {
-    width: 100%;
+.task-list {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
-li {
+.task-list li {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -169,7 +173,7 @@ ion-icon:hover{
         margin: 0 auto;
     }
 
-    li {
+    .task-list li {
         width: 100%;
     
     }
@@ -185,24 +189,25 @@ ion-icon:hover{
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 50px;
-        left: 0;
+        top: 100%;
+        right: 0;
         background-color: #e80564;
         width: 100%;
-        text-align: center;
+        
     }
 
     .menu.show {
         display: flex;
     }
 
-    .list {
+    .menu .nav-item {
+        text-align: center;
         margin: 15px 0;
     }
 }
 
 @media (max-width: 480px) {
-    li {
+    .task-list li {
         width: 100%;
         flex-direction: column;
         align-items: center;
