--- a/accueil.css
+++ b/accueil.css
@@ -54,10 +54,6 @@ li {
     font-weight: bold;
 }
 
-
-
-
-
 main {
     padding: 20px;
     max-width: 800px;
@@ -110,6 +106,8 @@ a:hover{
 @media (max-width: 768px) {
     .menu-burger {
         display: flex;
+        margin-right: 50px;
+    
     }
 
     .menu {
@@ -117,7 +115,7 @@ a:hover{
         flex-direction: column;
         position: absolute;
         top: 50px;
-        left: 0;
+        left: 0px;
         background-color: #e80564;
         width: 100%;
         text-align: center;
